[package]
edition = "2021"
name = "lo_"
version = "0.1.4"
authors = ["Saddam H <thedevsaddam@gmail.com>"]
description = "A modern Rust utility library delivering modularity, performance & extras proted from JavaScript Lodash"
repository = "https://github.com/thedevsaddam/lo_"
license = "MIT"
keywords = ["lodash", "js", "javascript", "utility", "rust-lodash"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["array", "string"]

array = ["chunk", "contains", "difference","intersection", "uniq", "without"]
chunk =[]
contains =[]
difference =[]
intersection =[]
uniq =[]
without =[]


string = ["camel_case", "capitalize", "ends_with", "lower_first", "starts_with", "upper_first", "words"]
camel_case = []
capitalize = []
ends_with = []
lower_first = []
starts_with = []
upper_first = []
words = ["regex"]



[dependencies]
regex = { version = "1.10.2", optional = true }