[package]
edition = "2021"
name = "lo_"
version = "0.1.9"
authors = ["Saddam H <thedevsaddam@gmail.com>"]
description = "A modern Rust utility library delivering modularity, performance & extras ported from JavaScript Lodash"
repository = "https://github.com/thedevsaddam/lo_"
homepage = "https://github.com/thedevsaddam/lo_"
documentation = "https://docs.rs/lo_"
keywords = ["lodash", "js", "javascript", "utility", "rust-lodash"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["array", "string", "condition"]

array = ["chunk", "contains", "difference", "find", "intersection", "uniq", "without"]
chunk =[]
contains =[]
difference =[]
find = []
intersection =[]
uniq =[]
without =[]


string = ["camel_case", "capitalize", "ends_with", "lower_first", "starts_with", "upper_first", "words", "template"]
camel_case = []
capitalize = []
ends_with = []
lower_first = []
starts_with = []
upper_first = []
words = ["regex"]
template = []

condition = []


[dependencies]
regex = { version = "1.10.2", optional = true }