[package]
edition = "2021"
name = "lo_"
version = "0.3.0"
authors = ["Saddam H <thedevsaddam@gmail.com>"]
description = "A modern Rust utility library delivering modularity, performance & extras ported from JavaScript Lodash"
repository = "https://github.com/thedevsaddam/lo_"
homepage = "https://github.com/thedevsaddam/lo_"
documentation = "https://docs.rs/lo_"
keywords = ["lodash", "js", "javascript", "utility", "rust-lodash"]
categories = ["data-structures", "text-processing", "asynchronous"]
readme = "README.md"
license = "MIT"

[features]
default = ["collection", "string", "general"]

# Collection utilities
collection = ["chunk", "contains", "difference", "find", "intersection", "uniq", "without", "omit_keys", "pick_keys", "drop", "drop_right", "zip_with", "assign", "subset"]
chunk = []
contains = []
difference = []
find = []
intersection = []
uniq = []
without = []
omit_keys = []
pick_keys = []
drop = []
drop_right = []
zip_with = []
assign = []
subset = []

# String utilities
string = ["camel_case", "title_case", "snake_case", "capitalize", "ends_with", "lower_first", "starts_with", "upper_first", "words", "template", "slugify", "truncate_middle", "safe_parse", "str_split", "str_pad", "str_rev", "wordwrap"]
camel_case = []
title_case = []
snake_case = []
capitalize = []
ends_with = []
lower_first = []
starts_with = []
upper_first = []
words = ["regex"]
template = []
slugify = []
truncate_middle = []
safe_parse = []
str_split = []
str_pad = []
str_rev = []
wordwrap = []

# General utilities
general = ["tap", "retry", "ternary", "ternary_f"]
tap = []
retry = []
ternary = []
ternary_f = []

# Async retry (behind feature flag)
async_retry = ["tokio"]

[dependencies]
regex = { version = "1.10.2", optional = true }
tokio = { version = "1.37", optional = true, features = ["time", "macros", "rt"] }

[package.metadata.docs.rs]
features = ["async_retry"]
